# r2-fileupload

./: .env.example  Cargo.toml
src/: main.rs
src/services/: R2Config.rs  mod.rs  r2_config.rs  rpc_route.rs
