[package]
name = "belajar_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.7"
aws-sdk-s3 = {version = "1.107.0", features = ["behavior-version-latest"]}
aws-types = "1.3.8"
chrono = "0.4.42"
dotenvy = "0.15.7"
serde_json = "1.0.145"
tokio = {version = "1.47.1", features = ["macros", "rt-multi-thread"]}
